--- a/src/main/html/five-in-a-row-cordova.html
+++ b/src/main/html/five-in-a-row-cordova.html
@@ -688,7 +688,7 @@ let render = (({ read, }) => {
 			cudf);
 	};
 
-	let rd_span_component = (initf, publicf, privatef, xhtml) => vm => {
+	let rd_span_component = (initf, deinitf, publicf, privatef, xhtml) => vm => {
 		let span = document.createElement('span');
 		let cudf_;
 		let vm_ = null;
@@ -721,6 +721,7 @@ let render = (({ read, }) => {
 				change(vm_ => initf(vm));
 			},
 			deinit: cudf => {
+				change(vm_ => deinitf(vm));
 				change(vm_ => null);
 				cudf.delete();
 			},
