--- a/src/main/html/five-in-a-row.html
+++ b/src/main/html/five-in-a-row.html
@@ -25,10 +25,13 @@ let usp = new URLSearchParams(window.location.search);
 let nStoneTypes = +usp.get('colors') || 5;
 let sizep = usp.get('size') || 7;
 
-Promise
-.all([].map(loadsrcscript))
-.then(addevalscripts(['five-in-a-row', 'frp', 'fun', 'pq', 'render',]))
-.then(({ ['five-in-a-row']: fiveinarow, fun: { rand, range, }, render: { rd, renderAgain, }, }) => {
+(async () => {
+	let fiveinarow = await evalscript('five-in-a-row.js');
+	let frp = await evalscript('frp.js');
+	let { rand, range, } = await evalscript('fun.js');
+	let pq = await evalscript('pq.js');
+	let { rd, renderAgain, } = await evalscript('render.js');
+
 	let cc = ((sizex, sizey) => ({
 		arrayx: () => ({ indices: range(0, sizex).list(), length: sizex, }),
 		arrayy: x => ({ indices: range(0, sizey).list(), length: sizey, }),
@@ -128,7 +131,6 @@ Promise
 	for (let [k, v] of Object.entries(gameInstance.handle)) handle[k] = v;
 
 	gameInstance.vw.init();
-})
-.catch(console.error);
+})().catch(console.error);
 	</script>
 </html>
