--- a/src/main/html/radar.html
+++ b/src/main/html/radar.html
@@ -13,8 +13,9 @@
 	<script type='text/javascript'>
 'use strict';
 
-evalscripts(['frp', 'fun',])
-.then(({ frp, fun: { rand, range, read, }, }) => {
+(async () => {
+	let frp = await evalscript('frp.js');
+	let { rand, range, read, } = await evalscript('fun.js');
 	let width = window.innerWidth;
 	let height = window.innerHeight;
 
@@ -131,8 +132,6 @@ evalscripts(['frp', 'fun',])
 
 		read(objects).foreach(object => object.draw(context));
 	});
-})
-.catch(console.error);
+})().catch(console.error);
 	</script>
-
 </html>
