--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -264,7 +264,7 @@ file:///home/ywsing/suite/src/main/html/render.html
 
 	globalThis.messager = b => renderAgain(view, vm => ({ ...vm, isPopup: b, }));
 
-	let eventSource = new EventSource('sse');
+	let eventSource = new EventSource('../sse');
 
 	eventSource.onError = console.error;
 	eventSource.onMessage = console.info;
