--- a/src/main/html/calc.html
+++ b/src/main/html/calc.html
@@ -24,37 +24,29 @@ file:///home/ywsing/suite/src/main/html/calc.html
 				}
 			};
 
-			let isCtrlB = e => e.ctrlKey && !e.shiftKey && e.key.toUpperCase() === 'B';
-			let isCtrlI = e => e.ctrlKey && !e.shiftKey && e.key.toUpperCase() === 'I';
-			let isCtrlS = e => e.ctrlKey && !e.shiftKey && e.key.toUpperCase() === 'S';
-			let isCtrlU = e => e.ctrlKey && !e.shiftKey && e.key.toUpperCase() === 'U';
-			let isDown = e => !e.ctrlKey && !e.shiftKey && e.key === 40;
-			let isLeft = e => !e.ctrlKey && !e.shiftKey && e.key === 37;
-			let isRight = e => !e.ctrlKey && !e.shiftKey && e.key === 39;
-			let isUp = e => !e.ctrlKey && !e.shiftKey && e.key === 38;
+			let keyName = e => ''
+				+ (e.altKey ? 'Alt-' : '')
+				+ (e.ctrlKey ? 'Ctrl-' : '')
+				+ (e.shiftKey ? 'Shift-' : '')
+				+ (e.key === 37 ? 'left'
+					: e.key === 38 ? 'up'
+					: e.key === 39 ? 'right'
+					: e.key === 40 ? 'down'
+					: e.key.toUpperCase());
+
+			let keyHandlers = {
+				'Ctrl-B': () => formatDocument('bold'),
+				'Ctrl-I': () => formatDocument('italic'),
+				'Ctrl-S': () => console.log('selection', window.getSelection().toString()),
+				'Ctrl-U': () => formatDocument('underline'),
+			};
 
 			document.onkeydown = e => {
-				if (isCtrlB(e)) {
-					e.preventDefault();
-				} else if (isCtrlI(e)) {
-					e.preventDefault();
-				} else if (isCtrlS(e)) {
-					e.preventDefault();
-				} else if (isCtrlU(e)) {
-					e.preventDefault();
-				}
+				keyHandlers[keyName(e)] && e.preventDefault();
 			};
 
 			document.onkeyup = e => {
-				if (isCtrlB(e)) {
-					formatDocument('bold');
-				} else if (isCtrlI(e)) {
-					formatDocument('italic');
-				} else if (isCtrlS(e)) {
-					console.log('selection', window.getSelection().toString());
-				} else if (isCtrlU(e)) {
-					formatDocument('underline');
-				}
+				keyHandlers[keyName(e)]?.();
 			};
 		</script>
 
